--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Matthias M&uuml;ller, Nvidia
     <p>X: <input type = "range" min = "0" max = "4" value = "2" id = "circleXSlider" class = "slider"> <span id = "circleX">0</span></p>
     <p>Y: <input type = "range" min = "0" max = "4" value = "3" id = "circleYSlider" class = "slider"> <span id = "circleY">0</span></p>
     <p>mass: <input type = "range" min = "0" max = "4" value = "2" id = "circleMassSlider" class = "slider"> <span id = "circleMass">1</span></p>
-
+    <p><input type = "checkbox" onclick = "onFloat()"> Floated</p>
   </div>
   
 <canvas id="myCanvas" width="500" height="500" style="border:3px solid #d3d3d3;">
