--- a/index.html
+++ b/index.html
@@ -3,120 +3,309 @@
 
 <!DOCTYPE html>
 <html>
-<head>
-<link rel="stylesheet" href="styles.css">
-</head>
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
+  <title>Npendulum Simulator</title>
+  <body>
+    <h1>N-pendulum Simulator</h1>
+    Poravee Binhayeearason 6230314421 <br />
+    Thanatach Tangsakul 6232014521
+    <br />
+    <br />
+    This is an extension of Pendulum Challenge from Matthias M&uuml;ller, Nvidia
+    <br />
 
-<title>The Pendulum Challenge</title>
-<body>
+    <table>
+      <tr>
+        <td>
+          <button onclick="resetPos(false)" class="button">Restart</button>
+          <button onclick="resetPos(true)" class="button">
+            Equilibrium position
+          </button>
+          <button onclick="step()" class="button">Step</button>
+          <button onclick="run()" class="button">Run</button>
+          <br /><br />
+          <canvas
+            id="myCanvas"
+            width="500"
+            height="500"
+            style="border: 3px solid #d3d3d3"
+          >
+            Your browser does not support the HTML5 canvas tag.</canvas
+          >
+        </td>
 
-<h1>The Pendulum Challenge</h1>
-Matthias M&uuml;ller, Nvidia
-<br>
-<br>
-<h3 style = "color: #B93226;">This simulation shows that extended position based dynamics (XPBD) is a strong competitor to state of the art simulation methods in terms of accuracy, stability, speed and simplicity. To understand why and how to use the demo see the text below.</h3>.
-<br>
+        <td id="gui">
+          <p>
+            <span id="ms">0.000</span> ms per frame, dt = 1/60 s, g = -10
+            m/s<sup>2</sup>
+          </p>
+          <p>
+            Number of links:
+            <input
+              type="range"
+              min="1"
+              max="4"
+              value="3"
+              id="segsSlider"
+              class="slider"
+            />
+            <span id="numSegs">3</span>
+          </p>
+          <p>
+            Number of sub-steps:
+            <input
+              type="range"
+              min="0"
+              max="6"
+              value="4"
+              id="stepsSlider"
+              class="slider"
+            />
+            <span id="steps">50</span>
+          </p>
+          <table>
+            <tr>
+              <th>mass (kg)</th>
+              <th>length (m)</th>
+              <th>compliance (m/N)</th>
+              <th>uni</th>
+            </tr>
+            <tr>
+              <td>
+                <input
+                  type="range"
+                  min="0"
+                  max="4"
+                  value="2"
+                  id="mass1Slider"
+                  class="slider"
+                />
+                <span id="mass1">1.0</span>
+              </td>
+              <td>
+                <input
+                  type="range"
+                  min="0"
+                  max="2"
+                  value="1"
+                  id="radius1Slider"
+                  class="slider"
+                />
+                <span id="radius1">0.3</span>
+              </td>
+              <td>
+                <input
+                  type="range"
+                  min="0"
+                  max="2"
+                  value="0"
+                  id="compliance1Slider"
+                  class="slider"
+                />
+                <span id="compliance1">0.000</span>
+              </td>
+              <td><input type="checkbox" onclick="onUnilateral(1)" /></td>
+            </tr>
+            <tr>
+              <td>
+                <input
+                  type="range"
+                  min="0"
+                  max="4"
+                  value="2"
+                  id="mass2Slider"
+                  class="slider"
+                />
+                <span id="mass2">1.0</span>
+              </td>
+              <td>
+                <input
+                  type="range"
+                  min="0"
+                  max="2"
+                  value="1"
+                  id="radius2Slider"
+                  class="slider"
+                />
+                <span id="radius2">0.3</span>
+              </td>
+              <td>
+                <input
+                  type="range"
+                  min="0"
+                  max="2"
+                  value="0"
+                  id="compliance2Slider"
+                  class="slider"
+                />
+                <span id="compliance2">0.000</span>
+              </td>
+              <td><input type="checkbox" onclick="onUnilateral(2)" /></td>
+            </tr>
+            <tr>
+              <td>
+                <input
+                  type="range"
+                  min="0"
+                  max="4"
+                  value="2"
+                  id="mass3Slider"
+                  class="slider"
+                />
+                <span id="mass3">1.0</span>
+              </td>
+              <td>
+                <input
+                  type="range"
+                  min="0"
+                  max="2"
+                  value="1"
+                  id="radius3Slider"
+                  class="slider"
+                />
+                <span id="radius3">0.3</span>
+              </td>
+              <td>
+                <input
+                  type="range"
+                  min="0"
+                  max="2"
+                  value="0"
+                  id="compliance3Slider"
+                  class="slider"
+                />
+                <span id="compliance3">0.000</span>
+              </td>
+              <td><input type="checkbox" onclick="onUnilateral(3)" /></td>
+            </tr>
+            <tr>
+              <td>
+                <input
+                  type="range"
+                  min="0"
+                  max="4"
+                  value="2"
+                  id="mass4Slider"
+                  class="slider"
+                />
+                <span id="mass4">1.0</span>
+              </td>
+              <td>
+                <input
+                  type="range"
+                  min="0"
+                  max="2"
+                  value="1"
+                  id="radius4Slider"
+                  class="slider"
+                />
+                <span id="radius4">0.3</span>
+              </td>
+              <td>
+                <input
+                  type="range"
+                  min="0"
+                  max="2"
+                  value="0"
+                  id="compliance4Slider"
+                  class="slider"
+                />
+                <span id="compliance4">0.000</span>
+              </td>
+              <td><input type="checkbox" onclick="onUnilateral(4)" /></td>
+            </tr>
+          </table>
 
-<table>
-  <tr>
-  <td>
-  <button onclick="resetPos(false)" class="button">Restart</button>
-	<button onclick="resetPos(true)" class="button">Equilibrium position</button>
-	<button onclick="step()" class="button">Step</button>
-	<button onclick="run()" class="button">Run</button>
-  <br><br>
-  <div>
-    <button onclick="createCircle()" class="button">Create Circle</button>
-    <p>X: <input type = "range" min = "0" max = "38" value = "19" id = "circleXSlider" class = "slider"> <span id = "circleX">0</span></p>
-    <p>Y: <input type = "range" min = "0" max = "38" value = "29" id = "circleYSlider" class = "slider"> <span id = "circleY">0</span></p>
-    <p>mass: <input type = "range" min = "0" max = "4" value = "2" id = "circleMassSlider" class = "slider"> <span id = "circleMass">1</span></p>
-    <p><input type = "checkbox" onclick = "onFloat()"> Floated</p>
-  </div>
-  
-<canvas id="myCanvas" width="500" height="500" style="border:3px solid #d3d3d3;">
-Your browser does not support the HTML5 canvas tag.</canvas>
-</td>
-<td id = "gui">
-<p><span id = "ms">0.000</span> ms per frame, dt = 1/60 s, g = -10 m/s<sup>2</sup></p>
-<p>Number of links: <input type = "range" min = "1" max = "4" value = "3" id = "segsSlider"  class = "slider"> <span id = "numSegs">3</span></p>
-<p>Number of sub-steps: <input type = "range" min = "0" max = "6" value = "4" id = "stepsSlider" class = "slider"> <span id = "steps">50</span></p>
-<table>
-<tr>
-<th>mass (kg)</th><th>length (m)</th><th>compliance (m/N)</th><th>uni</th>
-</tr>
-<tr>
-<td><input type = "range" min = "0" max = "4" value = "2" id = "mass1Slider" class = "slider"> <span id = "mass1">1.0</span></td>
-<td><input type = "range" min = "0" max = "2" value = "1" id = "radius1Slider" class = "slider"> <span id = "radius1">0.3</span></td>
-<td><input type = "range" min = "0" max = "2" value = "0" id = "compliance1Slider" class = "slider"> <span id = "compliance1">0.000</span></td>
-<td><input type = "checkbox" onclick = "onUnilateral(1)"></td>
-</tr>
-<tr>
-<td><input type = "range" min = "0" max = "4" value = "2" id = "mass2Slider" class = "slider"> <span id = "mass2">1.0</span></td>
-<td><input type = "range" min = "0" max = "2" value = "1" id = "radius2Slider" class = "slider"> <span id = "radius2">0.3</span></td>
-<td><input type = "range" min = "0" max = "2" value = "0" id = "compliance2Slider" class = "slider"> <span id = "compliance2">0.000</span></td>
-<td><input type = "checkbox" onclick = "onUnilateral(2)"></td>
-</tr>
-<tr>
-<td><input type = "range" min = "0" max = "4" value = "2" id = "mass3Slider"  class = "slider"> <span id = "mass3">1.0</span></td>
-<td><input type = "range" min = "0" max = "2" value = "1" id = "radius3Slider" class = "slider"> <span id = "radius3">0.3</span></td>
-<td><input type = "range" min = "0" max = "2" value = "0" id = "compliance3Slider" class = "slider"> <span id = "compliance3">0.000</span></td>
-<td><input type = "checkbox" onclick = "onUnilateral(3)"></td>
-</tr>
-<tr>
-<td><input type = "range" min = "0" max = "4" value = "2" id = "mass4Slider" class = "slider"> <span id = "mass4">1.0</span></td>
-<td><input type = "range" min = "0" max = "2" value = "1" id = "radius4Slider" class = "slider"> <span id = "radius4">0.3</span></td>
-<td><input type = "range" min = "0" max = "2" value = "0" id = "compliance4Slider" class = "slider"> <span id = "compliance4">0.000</span></td>
-<td><input type = "checkbox" onclick = "onUnilateral(4)"></td>
-</tr>
-</table>
-<p>Edge damping coefficient (Ns/m) <input type = "range" min = "0" max = "2" value = "0" id = "edgeDampingSlider" class = "slider"> <span id = "edgeDamping">0.0</span></p>
-<p>Global damping coefficient (Ns/m) <input type = "range" min = "0" max = "3" value = "0" id = "globalDampingSlider" class = "slider"> <span id = "globalDamping">0.0</span></p>
-<p><input type = "checkbox" onclick = "onEnergy()"> Enforce energy conservation</p>
-<p><input type = "checkbox" onclick = "onCollision()"> Collision handling</p>
-<p><input type = "checkbox" onclick = "onTrail()" checked> Show trail
-<input type = "checkbox" onclick = "onForces()"> Force labels</p>
-</td>
-</table>
-<p>
-This pendulum simulation shows <b>single step XPBD</b> in action. Two small modifications in our original position based dynamics method <b>PBD</b> turns the latter from a toy used in games into a serious competitor of physical simulation methods even surpassing their accuracy while staying as simple as <b>PBD</b>. We describe the method <a href = "https://matthias-research.github.io/pages/publications/smallsteps.pdf" target="_blank" class="paperButton"> here</a>. The pendulum simulation showcases the following features: It handles stiff systems with large mass ratios. (Zero compliance means infinite stiffness). It shows high frequency details and a high level of energy conservation both of which are difficult to achieve with implicit global solvers. All quantities have physical units and internal forces can easily be evaluated. It removes the conceptual differences of <b>PBD</b> to the backward Euler method. It also generalizes beyond the distance constraints we show here.
-<br><br>
-The challenge is to <b>beat our method</b> in terms of simplicity, speed, stability or accuracy. The html document you see here is self-contained. It includes the GUI, the rendering and the complete simulation code. You can have a look at it <a href = "https://github.com/matthias-research/pages/blob/master/challenges/pendulum.html" target = "_blank">here</a>. The solver itself only takes 100 lines of code (lines 460-560) which you can simply replace it with your own solution.
-<ul>
-  <li><b>The triple pendulum</b><br>
-  The demo starts with a triple pendulum. The reason is that there are quite a few double pendulum simulations on the web. While their reduced coordinates formulation is reasonable complex, the equations for the triple pendulum cover an entire page. Although our method conserves energy quite well, the simulation comes to a stop eventually. If you want to look at it forever, turn on "Enforce energy conservation". I do not recommend to use this feature in general however. </li>
- <li><b>Mouse interaction</b><br>
-  You can use the mouse to drag the masses. The mouse pointer is attached to the weights via a spring. This allows you to experience the weight variation and the stiffness of the rods.
-  </li>  
-  <li><b>Number of sub-steps</b><br>
-  The crucial idea to tremendously increase the convergence rate of PBD was to replace iterations by sub-steps. We have set the number of sub-steps to 50. Almost all demos work well with 20. The only reason to go higher is to reduce the amount of energy loss. Note that effect of compliance is independent of the number of sub-steps due to the XPBD update.
-  </li>
-  <li><b>Force labels</b><br>
-  Set the equilibrium position and turn on force labels. As you can see, the forces correspond to 10 times the weight below each link since gravity is 10. At the same time, the elongations are zero if the compliance is zero (corresponding to infinite stiffness). If you increase the compliance the elongations become proportional (via inverse compliance) to the forces. This is best seen with high edge damping. Pull on the weights to see what happens.</li>
-  <li>
-  <b>The single pendulum</b><br>
-  Set the number of segments to 1. Choose compliance zero. As expected from physics, the frequency is independent of the mass but dependent on the link length. Set the mass to ten and the compliance to 0.01. Then hit restart with a variety of edge damping coefficients. While the demo is running, change the number of sub-steps. As you see, the stiffness is unaffected. 
-  </li>
-  <li><b>The double pendulum</b><br>
-  Compare the behavior with the many simulations on the web. Play with all the parameters.</li>
-  <li><b>Unilateral constraints</b></br>
-  Turn compliance to zero and check the "uni" box. The links turn green. In this case, they are allowed to compress but not to expand. The corresponding constraints are called unilateral. Handling them with traditional solvers is challenging.</li>
-  <li><b>Collisions</b><br>
-  Turn on collision handling and see what happens. The last weight bounces off the x = 0 line. This experiment shows the high fidelity of you method. In this case, the trajectory has sharp edges. These are damped out with implicit solvers. The problem increases by increasing the order of the integration method. Collision constraints are unilateral as well.
-  </li>
-  <li><b>High mass ratios</b><br>
-  To see how well our method handles high mass ratios, set the number of links to four. Set the firs three masses to 0.1 and the last to 10 while all compliances are zero. Hit restart and see how there is almost no stretching in the links. Play with the number of sub-steps. Twenty are enough to handle this situation.
-  </li>
-  <li><b>Damping</b><br>
-  Edge damping decreases the bouncing of compliant links. As stiffness, damping is unconditionally stable with our method. Sometimes, users like the overall damping introduced artificially be implicit solvers. You can inject it in a controlled manner via the global damping parameter.</li>  
-  <li><b>Stability</b></br>
-  Note the stability of our approach over the wide space of parameters. We have not seen serious crashes but if it happens, simply re-load the page by hitting F5.
-</ul> 
-</p>
-<a href = "https://matthias-research.github.io/pages/challenges/challenges.html" class="button">More challenges</a>
-<br>
-<div class="powr-comments" id="968e209d_1569590391"></div>
-<script src="script.js"></script>
+          <p>
+            Edge damping coefficient (Ns/m)
+            <input
+              type="range"
+              min="0"
+              max="2"
+              value="0"
+              id="edgeDampingSlider"
+              class="slider"
+            />
+            <span id="edgeDamping">0.0</span>
+          </p>
+          <p>
+            Global damping coefficient (Ns/m)
+            <input
+              type="range"
+              min="0"
+              max="3"
+              value="0"
+              id="globalDampingSlider"
+              class="slider"
+            />
+            <span id="globalDamping">0.0</span>
+          </p>
+          <p>
+            <input type="checkbox" onclick="onEnergy()" /> Enforce energy
+            conservation
+          </p>
+          <p>
+            <input type="checkbox" onclick="onCollision()" /> Collision handling
+          </p>
+          <p>
+            <input type="checkbox" onclick="onTrail()" checked /> Show trail
+            <input type="checkbox" onclick="onForces()" /> Force labels
+          </p>
+        </td>
 
-</body>
+        <td>
+          <div>
+            <button onclick="createCircle()" class="button">
+              Create Circle
+            </button>
+            <p>
+              X:
+              <input
+                style="width: 400px"
+                type="range"
+                min="0"
+                max="38"
+                value="19"
+                id="circleXSlider"
+                class="slider"
+              />
+              <span id="circleX">0</span>
+            </p>
+            <p>
+              Y:
+              <input
+                style="width: 400px"
+                type="range"
+                min="0"
+                max="38"
+                value="29"
+                id="circleYSlider"
+                class="slider"
+              />
+              <span id="circleY">0</span>
+            </p>
+            <p>
+              mass:
+              <input
+                type="range"
+                min="0"
+                max="4"
+                value="2"
+                id="circleMassSlider"
+                class="slider"
+              />
+              <span id="circleMass">1</span>
+            </p>
+            <p><input type="checkbox" onclick="onFloat()" /> Floated</p>
+            <p><input type="checkbox" onclick="onFix()" /> Fixed</p>
+          </div>
+        </td>
+      </tr>
+    </table>
+
+    <script src="script.js"></script>
+  </body>
 </html>
