--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     Thanatach Tangsakul 6232014521
     <br />
     <br />
-    This is an extension of Pendulum Challenge from Matthias M&uuml;ller, Nvidia
+    This is an extension of Pendulum Challenge from Matthias M&uuml;ller
     <br />
 
     <table>
